syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
package agentgateway.dev.common;

option go_package = "github.com/agentgateway/agentgateway/go/api/common;common";

message LocalDataSource {
  oneof source {
    string file_path = 1;
    bytes inline = 2;
  }
}

message RemoteDataSource {
  string host = 1;
  uint32 port = 2;
  string path = 3;
  repeated Header headers = 4;
  google.protobuf.Duration initial_timeout = 5;
  google.protobuf.Duration refresh_interval = 6;
}

message BackendAuth {
  oneof auth {
    // Passthrough the Auth header
    google.protobuf.Empty passthrough = 1;
    // Use GCP auth
    google.protobuf.Empty GCP = 2;
  }
}

message BackendTls {
  bool insecure_skip_verify = 1;
}

message Header {
  string key = 1;
  oneof value {
    string string_value = 2;
    string env_value = 3;
  }
}
