syntax = "proto3";

package agentgateway.dev.listener;

option go_package = "github.com/agentgateway/agentgateway/go/api;api";

import "common.proto";
import "rbac.proto";

message Listener {
  string name = 1;

  enum Protocol {
    MCP = 0;
    A2A = 1;
  }

  Protocol protocol = 2;

  oneof listener {
    SseListener sse = 3;
    StdioListener stdio = 4;
  }
}

message SseListener {
  // The address of the listener.
  string address = 1;
  // The port of the listener.
  uint32 port = 2;

  message TlsConfig {
    agentgateway.dev.common.LocalDataSource key_pem = 1;
    agentgateway.dev.common.LocalDataSource cert_pem = 2;
  }

  TlsConfig tls = 3;

  message Authn {
    message JwtConfig {
      repeated string issuer = 1;
      repeated string audience = 2;
      oneof jwks {
        agentgateway.dev.common.LocalDataSource local_jwks = 3;
        agentgateway.dev.common.RemoteDataSource remote_jwks = 4;
      }
    }

    JwtConfig jwt = 1;
  }

  Authn authn = 4;

  repeated agentgateway.dev.rbac.RuleSet rbac = 5;
}

message StdioListener {}
